Fixed spacing

--- a/frontend/src/Components/Comments/ViewAllCommentsPopup.module.css
+++ b/frontend/src/Components/Comments/ViewAllCommentsPopup.module.css
@@ -1,15 +1,21 @@
-.text-center {
-    text-align: center;
+.total-comments {
+  text-align: center;
+  font-size: 1.2rem;
 }
 
 .view-btn {
-    background: none;
+  background: none;
 	color: inherit;
 	border: none;
-    padding: 0.5rem;
+  padding: 0.5rem;
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
-    display: block;
-    margin: 0 auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.close-modal-btn {
+  display: flex;
+  float: right;
 }
